--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -292,8 +292,8 @@ bMultiTargetFormat_ASTC=True
 TextureFormatPriority_ETC2=0.200000
 TextureFormatPriority_DXT=0.600000
 TextureFormatPriority_ASTC=0.900000
-SDKAPILevelOverride=
-NDKAPILevelOverride=
+SDKAPILevelOverride=latest
+NDKAPILevelOverride=android-32
 BuildToolsOverride=
 bStreamLandscapeMeshLODs=False
 bEnableDomStorage=False
